--- a/Responsive Web Design/Personal Porfolio Webpage/css/styles.css
+++ b/Responsive Web Design/Personal Porfolio Webpage/css/styles.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
     color: #f0f0f0;
     text-align: center;
 }
@@ -16,6 +17,7 @@ body {
     background-color: #be3144;
     display: flex;
     justify-content: flex-end;
+    z-index: 1;
 }
 
 .nav-link {
@@ -28,6 +30,7 @@ body {
 
 .nav-link:hover {
     background-color: darkslategray;
+    color: #f0f0f0;
 }
 
 #welcome-section {
@@ -53,11 +56,6 @@ h4 {
 #projects {
     background-color: #45567d;
     padding: 10rem 2rem;
-    min-width: 100vh;
-}
-
-#projecs-grid {
-    margin: 5%;
 }
 
 .project {
@@ -65,17 +63,74 @@ h4 {
 }
 
 h2 {
-    font-size: 250%;
-    text-decoration: underline;
+    font-size: 350%;
+}
+
+.contaner {
+    padding-top: 50px;
+    z-index: 2;
+    margin-bottom: 50px;
+}
+
+img {
+    width: 100%;
+    height: 15rem;
+    object-fit: cover;
 }
 
 p {
+    font-size: 150%;
+    padding: 10px;
     width: 100%;
     background-color: #303841;
 }
 
-@media (min-width: 992px) {
+#show-more {
+    background-color: #303841;
+    color: #f0f0f0;
+    padding: 20px;
+    text-decoration: none;
+}
 
+#show-more:hover {
+    background-color: #be3144;
+}
+
+#links {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #303841;
+    line-height: 2;
+}
+
+#fs {
+    font-size: 4em;
+}
+
+#fs2 {
+    font-style: italic;
+    padding-bottom: 30px;
+}
+
+.contact-details {
+    color: #f0f0f0;
+    text-decoration: none;
+    font-size: 1.2em;
+    padding: 20px;
+}
+
+.contact-details:hover {
+    color: #f0f0f0;
+    text-decoration: none;
+    font-size: 1.2em;
+    padding: 20px;
+    background-color: #be3144;
+}
+
+@media (min-width: 992px) {
+    
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
